objects/TrailHeaDX__c.object
<CustomObject>
    <fields>
        <fullName>Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuous_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuous Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Loading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Loading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Developer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Project_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA/Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record50__c</fullName>
        <defaultValue>false</defaultValue>
        <label>50+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Version Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X15_to_50__c</fullName>
        <defaultValue>false</defaultValue>
        <label>15 to 50</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_to_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1 to 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X50__c</fullName>
        <defaultValue>false</defaultValue>
        <label>50+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_to_14__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5 to 14</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <label>TrailHeaDX</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TH-{000}</displayFormat>
        <label>TrailHeaDX Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrailHeaDX</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>